--- a/covid-19.html
+++ b/covid-19.html
@@ -43,7 +43,7 @@
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
                 <li class="nav-item"><a class="nav-link" href="#news">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="/covid-19.html">COVID-19</a></li>
+                <li class="nav-item"><a class="nav-link" href="#covid-19.html">COVID-19</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
               </ul>
             </div>
