--- a/covid-image.html
+++ b/covid-image.html
@@ -36,7 +36,7 @@
             <div class="main_menu">
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container">
-						<a class="navbar-brand logo_h" href="/"><img src="img/TTPS LOGO.jpg" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
+						<a class="navbar-brand logo_h" href="index.html"><img src="img/TTPS LOGO.jpg" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -66,6 +66,8 @@
           <div class="main_title">
             <h2>TNTPS 2020 COVID 19 TIME SERVICE </h2>
           </div>
+          <a class="main_btn" href="/index.html" target="_blank">Back</a>
+              <br><br>
           <div class="row">
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
