--- a/covid-image.html
+++ b/covid-image.html
@@ -66,7 +66,7 @@
           <div class="main_title">
             <h2>TNTPS 2020 COVID 19 TIME SERVICE </h2>
           </div>
-          <a class="main_btn" href="/index.html" target="_blank">Back</a>
+          <a class="main_btn" href="/index.html">Back</a>
               <br><br>
           <div class="row">
               <div class="col-lg-4 col-md-4 col-xs-6 thumb">
